// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subgraph rendering subgraph with comment addXxx existXxx removeXxx APIs Edge operation methods works 1`] = `
"subgraph \\"test\\" {
  \\"node1\\";
  \\"node2\\";
  \\"node1\\" -> \\"node2\\";
}"
`;

exports[`Subgraph rendering subgraph with comment addXxx existXxx removeXxx APIs Subgraph operation methods works 1`] = `
"subgraph \\"test\\" {
  subgraph \\"sub\\" {
  }
}"
`;

exports[`Subgraph rendering subgraph with comment label attribute behavior html like 1`] = `
"subgraph \\"test\\" {
  graph [
    label = <<B>this is test for graph label</B>>,
  ];
  edge [
    label = <<U>this is test for edge label</U>>,
  ];
  node [
    label = <<I>this is test for node label</I>>,
  ];
}"
`;

exports[`Subgraph rendering subgraph with comment label attribute behavior plain text label to be quoted by double quotation 1`] = `
"subgraph \\"test\\" {
  graph [
    label = \\"this is test for graph label\\",
  ];
  edge [
    label = \\"this is test for edge label\\",
  ];
  node [
    label = \\"this is test for node label\\",
  ];
}"
`;

exports[`Subgraph rendering subgraph with comment multi line comment 1`] = `
"// this is comment.
// second line.
subgraph \\"test\\" {
}"
`;

exports[`Subgraph rendering subgraph with comment single line comment 1`] = `
"// this is comment.
subgraph \\"test\\" {
}"
`;
